gtk+의 필요한 버젼체그 실수 수정 multi head safty때문에 2.2 이상이 필요함(eggtrayicon에서 문제가 생김)
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@73 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -11,9 +11,9 @@ AC_PROG_INSTALL
 
 dnl Checks for libraries.
 AC_PATH_PROG(PKG_CONFIG, pkg-config,
-	     AC_MSG_ERROR([ximhangul needs pkg-config]))
-PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0.0,,
-		  AC_MSG_ERROR([ximhangul needs GTK+ 2.0.0 or higher]))
+	     AC_MSG_ERROR([xnabi needs pkg-config]))
+PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.2.0,,
+		  AC_MSG_ERROR([xnabi needs GTK+ 2.2.0 or higher]))
 
 dnl Checks for header files.
 AC_PATH_X
