fontset 관련 루틴 추가
git-svn-id: http://kldp.net/svn/nabi/trunk@89 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -16,6 +16,7 @@ nabi_SOURCES = \
 	server.h server.c \
 	hangul.h hangul.c \
 	ic.h ic.c \
+	fontset.h fontset.c \
 	eggtrayicon.h eggtrayicon.c \
 	handler.c \
 	automata.c \
