X 환경을 검색하는 매크로를 다른 것으로 바꿈
git-svn-id: http://kldp.net/svn/nabi/trunk@136 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -1,12 +1,14 @@
-INCLUDES = \
+
+AM_CFLAGS = -Wall
+
+bin_PROGRAMS = nabi
+nabi_CFLAGS = \
+	@X_CFLAGS@ \
 	@GTK_CFLAGS@ \
 	-DLOCALEDIR=\"${datadir}/locale\" \
 	-DNABI_DATA_DIR=\"@NABI_DATA_DIR@\" \
 	-DNABI_THEMES_DIR=\"@NABI_THEMES_DIR@\"
 
-AM_CFLAGS = -Wall
-
-bin_PROGRAMS = nabi
 nabi_SOURCES = \
 	nabi.h \
 	gettext.h \
@@ -23,5 +25,5 @@ nabi_SOURCES = \
 	ui.c \
 	main.c
 
-nabi_LDADD = @GTK_LIBS@ ../IMdkit/libXimd.a
+nabi_LDADD = @X_LIBS@ -lX11 @GTK_LIBS@ ../IMdkit/libXimd.a
 
