LDFLAGS와 LDADD를 분리
git-svn-id: http://kldp.net/svn/nabi/trunk@137 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -25,5 +25,6 @@ nabi_SOURCES = \
 	ui.c \
 	main.c
 
-nabi_LDADD = @X_LIBS@ -lX11 @GTK_LIBS@ ../IMdkit/libXimd.a
+nabi_LDFLAGS = @X_LIBS@ -lX11 @GTK_LIBS@ 
+nabi_LDADD = ../IMdkit/libXimd.a
 
