AM_CFLAGS가 작동 안함, 그래서 nabi_CFLAGS에다가 직접 -Wall 옵션 넣음
git-svn-id: http://kldp.net/svn/nabi/trunk@159 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -7,7 +7,8 @@ nabi_CFLAGS = \
 	@GTK_CFLAGS@ \
 	-DLOCALEDIR=\"${datadir}/locale\" \
 	-DNABI_DATA_DIR=\"@NABI_DATA_DIR@\" \
-	-DNABI_THEMES_DIR=\"@NABI_THEMES_DIR@\"
+	-DNABI_THEMES_DIR=\"@NABI_THEMES_DIR@\" \
+	-Wall
 
 nabi_SOURCES = \
 	nabi.h \
