Session 에 반응하도록 코드를 추가
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@170 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -25,6 +25,10 @@ AC_CHECK_FUNCS([gethostname memmove memset mkdir nl_langinfo setlocale strcasecm
 
 dnl Checks for X window system
 AC_PATH_XTRA
+case $X_PRE_LIBS in
+*"-lSM"*)
+    AC_DEFINE_UNQUOTED(HAVE_LIBSM, 1, Define to 1 if you have the libSM library.)
+esac
 
 dnl Checks for GTK+ libraries.
 AC_PATH_PROG(PKG_CONFIG, pkg-config,
