Add new candidate window routine
git-svn-id: http://kldp.net/svn/nabi/trunk@229 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -22,6 +22,7 @@ nabi_SOURCES = \
 	fontset.h fontset.c \
 	eggtrayicon.h eggtrayicon.c \
 	session.h session.c \
+	candidate.h candidate.c \
 	handler.c \
 	automata.c \
 	ui.c \
