add symboltable.h to source list
git-svn-id: http://kldp.net/svn/nabi/trunk@232 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/src/Makefile.am
+++ b/nabi/src/Makefile.am
@@ -14,7 +14,7 @@ nabi_SOURCES = \
 	nabi.h \
 	gettext.h \
 	default-icons.h \
-	hanjatable.h \
+	hanjatable.h symboltable.h \
 	keyboard.h \
 	server.h server.c \
 	hangul.h hangul.c \
