MSWindows2000 테마 추가
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@267 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -83,6 +83,7 @@ themes/Mac/Makefile
 themes/Onion/Makefile
 themes/KingSejong/Makefile
 themes/keyboard/Makefile
+themes/MSWindows2000/Makefile
 m4/Makefile 
 po/Makefile.in 
 ])
