hanja_table과 symbol_table을 더이상 사용하지 않고 외부의 데이터 파일 (NABI_DATA_DIR/candidate/nabi.txt)로 저장한 것을 읽어 오는 형식으로 바꿈
git-svn-id: http://kldp.net/svn/nabi/trunk@298 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/tables/Makefile.am
+++ b/nabi/tables/Makefile.am
@@ -9,4 +9,7 @@ keyboard_DATA = \
 composedir = @NABI_DATA_DIR@/compose
 compose_DATA = compose/default
 
-EXTRA_DIST = $(keyboard_DATA) $(compose_DATA)
+candidatedir = @NABI_DATA_DIR@/candidate
+candidate_DATA = candidate/nabi.txt
+
+EXTRA_DIST = $(keyboard_DATA) $(compose_DATA) $(candidate_DATA)
