--- a/themes/MSWindowsXP/Makefile.am
+++ b/themes/MSWindowsXP/Makefile.am
@@ -1,5 +1,5 @@
 
-themedir= @NABI_THEMES_DIR@/MSWindows2000
+themedir= @NABI_THEMES_DIR@/MSWindowsXP
 theme_DATA = none.png hangul.png english.png
 
 EXTRA_DIST = $(theme_DATA)
