MSWindows2000 테마 이름을 MSWindowXP로 바꿈
git-svn-id: http://kldp.net/svn/nabi/trunk@346 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/themes/MSWindowsXP/Makefile.am
+++ b/nabi/themes/MSWindowsXP/Makefile.am
@@ -1,5 +1,5 @@
 
-themedir= @NABI_THEMES_DIR@/MSWindows2000
+themedir= @NABI_THEMES_DIR@/MSWindowsXP
 theme_DATA = none.png hangul.png english.png
 
 EXTRA_DIST = $(theme_DATA)
