--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,11 @@
-
 src/automata.c
+src/candidate.c
 src/eggtrayicon.c
+src/fontset.c
 src/handler.c
 src/hangul.c
 src/ic.c
 src/main.c
 src/server.c
+src/session.c
 src/ui.c
