--- a/nabi/configure.in
+++ b/nabi/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(src/nabi.h)
+AC_INIT(nabi, 0.13, http://kldp.net/tracker/?func=add&group_id=275&atid=100275)
 
 AM_INIT_AUTOMAKE(nabi, 0.13)
 AM_CONFIG_HEADER(config.h)
