autoconf 2.57에 맞게 AC_INIT 매크로의 인자 수정
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@417 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(src/nabi.h)
+AC_INIT(nabi, 0.13, http://kldp.net/tracker/?func=add&group_id=275&atid=100275)
 
 AM_INIT_AUTOMAKE(nabi, 0.13)
 AM_CONFIG_HEADER(config.h)
