--- a/nabi/configure.in
+++ b/nabi/configure.in
@@ -10,6 +10,7 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 dnl Checks for header files.
+AC_PATH_X
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS([langinfo.h libintl.h locale.h stddef.h stdint.h stdlib.h string.h sys/param.h wchar.h])
@@ -24,7 +25,7 @@ AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS([gethostname memmove memset mkdir nl_langinfo setlocale strcasecmp strtol])
+AC_CHECK_FUNCS([gethostname memmove memset mkdir putenv setlocale strchr strdup strtol])
 
 dnl Checks for X window system
 AC_PATH_XTRA
