* keyboard table과 compose table을 위한 함수 nabi_server_load_keyboard_table()  nabi_server_load_compose_table()을 구현함. 더이상 ui.c에서 키보드와 컴포우즈  테이블을 관리하지 않음.  * keyboard_map, compose_map에서 keyboard_table, compose_table로 이름을 바꿈  * compose table 포맷을 변경 name 부분을 []로 구분함
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@446 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -58,19 +58,19 @@ dnl default keyboard
 AC_ARG_WITH(default-keyboard, [  --with-default-keyboard=2/39/3f   default hangul keyboard])
 case "$with_default_keyboard" in
     2)
-	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "2qwerty",
+	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "두벌식",
 			   [Define default hangul keyboard])
 	;;
     39)
-	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "39qwerty",
+	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "세벌식 390",
 			   [Define default hangul keyboard])
 	;;
     3f)
-	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "3fqwerty",
+	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "세벌식 최종",
 			   [Define default hangul keyboard])
 	;;
     *)
-	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "2qwerty",
+	AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD, "두벌식",
 			   [Define default hangul keyboard])
 	;;
 esac
