--- a/nabi/configure.in
+++ b/nabi/configure.in
@@ -88,5 +88,6 @@ themes/Onion/Makefile
 themes/KingSejong/Makefile
 themes/keyboard/Makefile
 themes/MSWindowsXP/Makefile
+themes/Tux/Makefile
 po/Makefile.in 
 ])
