* 순아래 자판 추가 * 옛글 compose table을 Makefile.am에 추가
git-svn-id: http://kldp.net/svn/nabi/trunk@498 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/tables/Makefile.am
+++ b/nabi/tables/Makefile.am
@@ -4,10 +4,11 @@ keyboard_DATA = \
 	keyboard/2qwerty \
 	keyboard/32qwerty \
 	keyboard/39qwerty \
+	keyboard/3sqwerty \
 	keyboard/3fqwerty
 
 composedir = @NABI_DATA_DIR@/compose
-compose_DATA = compose/default
+compose_DATA = compose/default compose/full
 
 candidatedir = @NABI_DATA_DIR@/candidate
 candidate_DATA = candidate/nabi.txt
