--- a/nabi/Makefile.am
+++ b/nabi/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = IMdkit src tables themes po
 
 nabilogodir = @NABI_DATA_DIR@
-nabilogo_DATA = nabi.png nabi.svg
+nabilogo_DATA = nabi.png nabi.svg nabi-about.png
 
 EXTRA_DIST = config.rpath $(nabilogo_DATA)
