Update about window (thanks to bluetux)
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@515 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = IMdkit src tables themes po
 
 nabilogodir = @NABI_DATA_DIR@
-nabilogo_DATA = nabi.png nabi.svg
+nabilogo_DATA = nabi.png nabi.svg nabi-about.png
 
 EXTRA_DIST = config.rpath $(nabilogo_DATA)
