--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,11 @@ SUBDIRS = IMdkit src tables themes po
 nabilogodir = @NABI_DATA_DIR@
 nabilogo_DATA = nabi.png nabi.svg nabi-about.png
 
-EXTRA_DIST = config.rpath $(nabilogo_DATA)
+testclients = \
+	test/Makefile	\
+	test/xlib.cpp	\
+	test/gtk.c	\
+	test/gtk1.c	\
+	test/qt.cpp
+
+EXTRA_DIST = config.rpath $(nabilogo_DATA) $(testclients)
