Jini 테마 추가 (from http://kldp.net/projects/jini/ )
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@540 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -89,5 +89,6 @@ themes/KingSejong/Makefile
 themes/keyboard/Makefile
 themes/MSWindowsXP/Makefile
 themes/Tux/Makefile
+themes/Jini/Makefile
 po/Makefile.in 
 ])
