add German translation (Thanks to Niklaus Giger)
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@541 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.2.0,,
 		  AC_MSG_ERROR([nabi needs GTK+ 2.2.0 or higher]))
 
 dnl gettext stuff
-ALL_LINGUAS="ko"
+ALL_LINGUAS="ko de"
 AM_GLIB_GNU_GETTEXT
 
 GETTEXT_PACKAGE="$PACKAGE"
