libhangul 적용  * configure할때 libhangul이 있는지 확인함  * keyboard loading 루틴제거  * compose table loading 루틴 제거  * candidate 처리 코드를 libhangul의 것으로 대체  * automata를 libhangul의 HangulInputContext를 사용
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@548 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,10 @@ AC_PATH_PROG(PKG_CONFIG, pkg-config,
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.2.0,,
 		  AC_MSG_ERROR([nabi needs GTK+ 2.2.0 or higher]))
 
+# checks for libhangul
+PKG_CHECK_MODULES(LIBHANGUL, libhangul >= 0.0.3,,
+		  AC_MSG_ERROR([nabi needs libhangul 0.0.3 or higher]))
+
 dnl gettext stuff
 ALL_LINGUAS="ko de"
 AM_GLIB_GNU_GETTEXT
