keyboard_layouts 파일 인스톨 룰 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@558 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/tables/Makefile.am
+++ b/tables/Makefile.am
@@ -1,16 +1,5 @@
 
-keyboarddir = @NABI_DATA_DIR@/keyboard
-keyboard_DATA = \
-	keyboard/2qwerty \
-	keyboard/32qwerty \
-	keyboard/39qwerty \
-	keyboard/3sqwerty \
-	keyboard/3fqwerty
+keyboarddir = @NABI_DATA_DIR@
+keyboard_DATA = keyboard_layouts
 
-composedir = @NABI_DATA_DIR@/compose
-compose_DATA = compose/default compose/full
-
-candidatedir = @NABI_DATA_DIR@/candidate
-candidate_DATA = candidate/nabi.txt
-
-EXTRA_DIST = $(keyboard_DATA) $(compose_DATA) $(candidate_DATA)
+EXTRA_DIST = $(keyboard_DATA)
