디버그 메시지 출력 기능 구현:  * -d [0-5] 옵션을 사용하여 디버그 메시지 출력하는 기능 추가  * debug.h, debug.c 추가  * nabi_log() 함수로 메시지 출력  * xim protocol 스트링 출력하는 코드를 xim_protocol.h 로 분리
ic 버그 수정:
 * fontset를 두번 free하던 코드 제거
 * str이 없으면 commit 하지 않음



git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@561 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ nabi_SOURCES = \
 	gettext.h \
 	default-icons.h \
 	keyboard.h \
+	debug.c \
 	server.h server.c \
 	ic.h ic.c \
 	fontset.h fontset.c \
