문서 업데이트 ChangeLog 자동 생성룰 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@570 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,3 +11,12 @@ testclients = \
 	test/qt.cpp
 
 EXTRA_DIST = config.rpath $(nabilogo_DATA) $(testclients)
+
+log:
+	lastdate=`head -n 1 ChangeLog | grep -oe '[0-9]\{4\}-[0-9]\{2\}-[0-9]\{2\}'` ; \
+	unset LC_ALL; \
+	export LANG=C ; \
+	export LC_CTYPE=ko_KR.UTF-8 ; \
+	mv -f ChangeLog ChangeLog.old ; \
+	svn log -v -r HEAD:{$$lastdate} > ChangeLog ; \
+	cat ChangeLog.old >> ChangeLog
