tagging the 0.16 release of nabi
git-svn-id: http://kldp.net/svn/nabi/nabi/tags/NABI_0_16@571 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,19 +11,19 @@ nabi_CFLAGS = \
 nabi_SOURCES = \
 	nabi.h \
 	gettext.h \
+	xim_protocol.h \
 	default-icons.h \
-	keyboard.h \
+	debug.h debug.c \
 	server.h server.c \
 	ic.h ic.c \
 	fontset.h fontset.c \
 	eggtrayicon.h eggtrayicon.c \
 	session.h session.c \
 	candidate.h candidate.c \
+	keycapturedialog.h keycapturedialog.c \
 	handler.c \
 	ui.c \
 	preference.c \
-	keycapturedialog.h \
-	keycapturedialog.c \
 	main.c
 
 nabi_LDFLAGS = @LIBHANGUL_LIBS@ @X_LIBS@ @X_PRE_LIBS@ -lX11 @GTK_LIBS@ 
