NabiConfig 작성:  * conf.c conf.h 추가  * configuration을 모두 NabiConfig로 관리함  * NabiApplication에서 멤버 일부를 NabiConfig로 옮김  * config 파일 관련 코드를 conf.c로 옮김  * preference에서 nabi_app_set_xxx()함수를 호출하던 것을 직접 NabiConfig    스트럭쳐의 내용을 바꾸도록 수정함
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@585 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,7 @@ nabi_SOURCES = \
 	session.h session.c \
 	candidate.h candidate.c \
 	keycapturedialog.h keycapturedialog.c \
+	conf.h conf.c \
 	handler.c \
 	ui.c \
 	preference.c \
