문서 업데이트 ChangeLog 생성룰 개선
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@632 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,10 +13,10 @@ testclients = \
 EXTRA_DIST = config.rpath $(nabilogo_DATA) $(testclients)
 
 log:
-	lastdate=`head -n 2 ChangeLog | grep -oe '[0-9]\{4\}-[0-9]\{2\}-[0-9]\{2\}'` ; \
+	lastrevision=`head -n 2 ChangeLog | egrep -o '^r[0-9]+' | cut -c 2-`; \
 	unset LC_ALL; \
 	export LANG=C ; \
 	export LC_CTYPE=ko_KR.UTF-8 ; \
 	mv -f ChangeLog ChangeLog.old ; \
-	svn log -v -r HEAD:{$$lastdate} > ChangeLog ; \
+	svn log -v --incremental -r HEAD:`expr $${lastrevision} + 1` > ChangeLog ; \
 	cat ChangeLog.old >> ChangeLog
