candidate에 symbol table 추가:  자음으로 기호 입력하는 기능 구현
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@634 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/tables/Makefile.am
+++ b/tables/Makefile.am
@@ -2,4 +2,7 @@
 keyboarddir = @NABI_DATA_DIR@
 keyboard_DATA = keyboard_layouts
 
-EXTRA_DIST = $(keyboard_DATA)
+symboltabledir = @NABI_DATA_DIR@
+symboltable_DATA = symbol.txt
+
+EXTRA_DIST = $(keyboard_DATA) $(symboltable_DATA)
