KingSejong2 아이콘 추가 Stefan Krämer <st.kraemer@gmail.com>님이 보내주신 것
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@635 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -19,6 +19,9 @@ keyboard_DATA = keyboard/README keyboard/none.png keyboard/hangul.png keyboard/e
 kingsejongdir= @NABI_THEMES_DIR@/KingSejong
 kingsejong_DATA = KingSejong/README KingSejong/none.png KingSejong/hangul.png KingSejong/english.png
 
+kingsejong2dir= @NABI_THEMES_DIR@/KingSejong2
+kingsejong2_DATA = KingSejong2/README KingSejong2/none.png KingSejong2/hangul.png KingSejong2/english.png
+
 tuxdir= @NABI_THEMES_DIR@/Tux
 tux_DATA = Tux/README Tux/none.png Tux/hangul.png Tux/english.png
 
