kingsejong2를 dist 패키지에 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@640 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -25,5 +25,6 @@ EXTRA_DIST = \
 	$(onion_DATA) \
 	$(keyboard_DATA) \
 	$(kingsejong_DATA) \
+	$(kingsejong2_DATA) \
 	$(tux_DATA) \
 	$(jini_DATA)
