간체자 입력 기능 구현:  * 설정창 한자탭에 "간체자로 입력" 옵션 추가  * config에 use_simplified_chinese 옵션 추가  * util.c util.h sctc.h를 추가하고 nabi_traditional_to_simplified() 함수를    이용하여 간체자와 번체자간 변환을 처리  * 옵션에 대한 번역 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@646 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ nabi_SOURCES = \
 	ui.c \
 	preference.c \
 	handlebox.h handlebox.c \
+	sctc.h util.h util.c \
 	main.c
 
 nabi_LDFLAGS = @LIBHANGUL_LIBS@ @X_LIBS@ @X_PRE_LIBS@ -lX11 @GTK_LIBS@ 
