ChangeLog 생성 룰 수정:  * ChangeLog를 svn의 로그를 사용하기로 함    이전의 로그는 ChangeLog.0로 옮김    svn log로 부터 ChangeLog 다시 생성, 앞으로는 svn log로만 관리  * Makefile.am에서 ChangeLog 생성하는 룰를 간단하게 바꿈
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@719 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,13 +10,11 @@ testclients = \
 	test/gtk1.c	\
 	test/qt.cpp
 
-EXTRA_DIST = config.rpath $(nabilogo_DATA) $(testclients)
+EXTRA_DIST = config.rpath $(nabilogo_DATA) $(testclients) ChangeLog.0
 
+.PHONY: log
 log:
-	lastrevision=`head -n 2 ChangeLog | egrep -o '^r[0-9]+' | cut -c 2-`; \
 	unset LC_ALL; \
 	export LANG=C ; \
 	export LC_CTYPE=ko_KR.UTF-8 ; \
-	mv -f ChangeLog ChangeLog.old ; \
-	svn log -v --incremental -r HEAD:`expr $${lastrevision} + 1` > ChangeLog ; \
-	cat ChangeLog.old >> ChangeLog
+	svn log -v > ChangeLog
