--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,7 @@ nabi_SOURCES = \
 	preference.c \
 	handlebox.h handlebox.c \
 	sctc.h util.h util.c \
+	ustring.h ustring.c \
 	main.c
 
 nabi_LDFLAGS = @LIBHANGUL_LIBS@ @X_LIBS@ @X_PRE_LIBS@ -lX11 @GTK_LIBS@ 
