preference.h Makefile.am에 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@736 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,7 @@ nabi_SOURCES = \
 	conf.h conf.c \
 	handler.c \
 	ui.c \
-	preference.c \
+	preference.h preference.c \
 	handlebox.h handlebox.c \
 	sctc.h util.h util.c \
 	ustring.h ustring.c \
