LDFLAGS 대신 LDADD 를 사용함  젠투에서 --as-needed 옵션을 사용하려면 이렇게 수정해야 한다고 함  수정하면서 라이브러리 링크 순서도 제대로 고침  참고: http://www.gentoo.org/proj/en/qa/asneeded.xml
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@751 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,10 @@ nabi_SOURCES = \
 	ustring.h ustring.c \
 	main.c
 
-nabi_LDFLAGS = @LIBHANGUL_LIBS@ @X_LIBS@ @X_PRE_LIBS@ -lX11 @GTK_LIBS@ 
-nabi_LDADD = ../IMdkit/libXimd.a
-
+nabi_LDADD = \
+	../IMdkit/libXimd.a \
+	@GTK_LIBS@ \
+	@X_LIBS@ \
+	@X_PRE_LIBS@ \
+	-lX11 \
+	@LIBHANGUL_LIBS@
