ubuntu-mono-dark, ubuntu-mono-light 테마 추가 이준희 <bugbear5@gmail.com>님이 보내주심
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@788 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -20,6 +20,20 @@ jinidir= @NABI_THEMES_DIR@/Jini
 jini_DATA = Jini/README Jini/none.png Jini/hangul.png Jini/english.png \
 	    Jini/none.svg Jini/hangul.svg Jini/english.svg
 
+ubuntu_mono_darkdir = ${NABI_THEMES_DIR}/ubuntu-mono-dark
+ubuntu_mono_dark_DATA = \
+    ubuntu-mono-dark/README \
+    ubuntu-mono-dark/english.png \
+    ubuntu-mono-dark/hangul.png \
+    ubuntu-mono-dark/none.png
+
+ubuntu_mono_lightdir = ${NABI_THEMES_DIR}/ubuntu-mono-light
+ubuntu_mono_light_DATA = \
+    ubuntu-mono-light/README \
+    ubuntu-mono-light/english.png \
+    ubuntu-mono-light/hangul.png \
+    ubuntu-mono-light/none.png
+
 EXTRA_DIST = \
 	$(simplyred_DATA) \
 	$(onion_DATA) \
@@ -27,4 +41,6 @@ EXTRA_DIST = \
 	$(kingsejong_DATA) \
 	$(kingsejong2_DATA) \
 	$(tux_DATA) \
-	$(jini_DATA)
+	$(jini_DATA) \
+	$(ubuntu_mono_dark_DATA) \
+	$(ubuntu_mono_light_DATA)
