Makefile.am 파일 정리 @매크로로 미리 대입시켜놓는 것보다 변수를 사용하는 것이 Makefile을 직접 고칠때 편리한 것 같다.
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@789 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -1,24 +1,53 @@
-simplyreddir= @NABI_THEMES_DIR@/SimplyRed
-simplyred_DATA = SimplyRed/none.png SimplyRed/hangul.png SimplyRed/english.png
+simplyreddir= ${NABI_THEMES_DIR}/SimplyRed
+simplyred_DATA = \
+    SimplyRed/english.png \
+    SimplyRed/hangul.png \
+    SimplyRed/none.png
 
-oniondir= @NABI_THEMES_DIR@/Onion
-onion_DATA = Onion/README Onion/none.png Onion/hangul.png Onion/english.png
+oniondir= ${NABI_THEMES_DIR}/Onion
+onion_DATA = \
+    Onion/README \
+    Onion/english.png \
+    Onion/hangul.png \
+    Onion/none.png
 
-keyboarddir= @NABI_THEMES_DIR@/keyboard
-keyboard_DATA = keyboard/README keyboard/none.png keyboard/hangul.png keyboard/english.png
+keyboarddir= ${NABI_THEMES_DIR}/keyboard
+keyboard_DATA = \
+    keyboard/README \
+    keyboard/english.png \
+    keyboard/hangul.png \
+    keyboard/none.png
 
-kingsejongdir= @NABI_THEMES_DIR@/KingSejong
-kingsejong_DATA = KingSejong/README KingSejong/none.png KingSejong/hangul.png KingSejong/english.png
+kingsejongdir= ${NABI_THEMES_DIR}/KingSejong
+kingsejong_DATA = \
+    KingSejong/README \
+    KingSejong/english.png \
+    KingSejong/hangul.png \
+    KingSejong/none.png
 
-kingsejong2dir= @NABI_THEMES_DIR@/KingSejong2
-kingsejong2_DATA = KingSejong2/README KingSejong2/none.png KingSejong2/hangul.png KingSejong2/english.png
+kingsejong2dir= ${NABI_THEMES_DIR}/KingSejong2
+kingsejong2_DATA = \
+    KingSejong2/README \
+    KingSejong2/english.png \
+    KingSejong2/hangul.png \
+    KingSejong2/none.png
 
-tuxdir= @NABI_THEMES_DIR@/Tux
-tux_DATA = Tux/README Tux/none.png Tux/hangul.png Tux/english.png
+tuxdir= ${NABI_THEMES_DIR}/Tux
+tux_DATA = \
+    Tux/README \
+    Tux/english.png \
+    Tux/hangul.png \
+    Tux/none.png
 
-jinidir= @NABI_THEMES_DIR@/Jini
-jini_DATA = Jini/README Jini/none.png Jini/hangul.png Jini/english.png \
-	    Jini/none.svg Jini/hangul.svg Jini/english.svg
+jinidir= ${NABI_THEMES_DIR}/Jini
+jini_DATA = \
+    Jini/README \
+    Jini/english.png \
+    Jini/hangul.png \
+    Jini/none.png \
+    Jini/english.svg \
+    Jini/hangul.svg \
+    Jini/none.svg
 
 ubuntu_mono_darkdir = ${NABI_THEMES_DIR}/ubuntu-mono-dark
 ubuntu_mono_dark_DATA = \
