Makefile에서 변수를 사용하는 것으로 바꿈
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@794 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/IMdkit/Makefile.am
+++ b/IMdkit/Makefile.am
@@ -1,7 +1,7 @@
 
 noinst_LIBRARIES = libXimd.a
 
-libXimd_a_CFLAGS = @X_CFLAGS@
+libXimd_a_CFLAGS = $(X_CFLAGS)
 
 libXimd_a_SOURCES = \
 	FrameMgr.c \
