기본 아이콘 테마를 선택할 수 있는 configure 옵션(--with-default-theme) 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@795 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,21 @@ case "$with_default_keyboard" in
 	;;
 esac
 
+# default theme
+AC_MSG_CHECKING([for default theme name])
+AC_ARG_WITH(default-theme, [  --with-default-theme=[THEME]   default icon theme])
+if test -n "$with_default_theme"; then
+    if test ! -d "themes/$with_default_theme"; then
+	AC_MSG_NOTICE([there is no such theme directory: $with_default_theme, use default])
+	with_default_theme="Jini"
+    fi
+else
+    with_default_theme="Jini"
+fi
+
+AC_MSG_RESULT([$with_default_theme])
+AC_DEFINE_UNQUOTED(DEFAULT_THEME, "$with_default_theme", [Define default icon theme])
+
 if test "$enable_debug" = "yes"; then
     AC_DEFINE(NABI_DEBUG, 1, [Define to 1 if you want to use debug code])
     CFLAGS="$CFLAGS -Wall -g"
