문서 업데이트
프로젝트 설명을 업데이트
프로젝트 주소를 kldp.net에서 http://code.google.com/p/nabi/ 로 바꿈

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(nabi, 0.99.10, http://kldp.net/projects/nabi/)
+AC_INIT(nabi, 0.99.10, http://code.google.com/p/nabi/)
 AM_INIT_AUTOMAKE([])
 
 AM_CONFIG_HEADER(config.h)
